server/commit_v21.txt
╭───────────────────────────────────────╮
│ 🥊 lefthook v1.13.6  hook: pre-commit │
╰───────────────────────────────────────╯
warning: `VIRTUAL_ENV=D:/workspace/indie/feedalyze/server/.venv` does not match the project environment path `.venv` and will be ignored; use `--active` to target the active environment instead
   Building fastapi-best-architecture @ file:///D:/workspace/indie/userecho/server
      Built fastapi-best-architecture @ file:///D:/workspace/indie/userecho/server
Uninstalled 1 package in 8ms
warning: Failed to hardlink files; falling back to full copy. This may lead to degraded performance.
         If the cache and target directories are on different filesystems, hardlinking may not be supported.
         If this is intentional, set `export UV_LINK_MODE=copy` or use `--link-mode=copy` to suppress this warning.
Installed 1 package in 21ms
┃  backend-linter ❯ 

fix end of files.........................................................Passed
- hook id: end-of-file-fixer
- duration: 0.89s
check json...............................................................Passed
- hook id: check-json
- duration: 0.95s
check yaml...............................................................Passed
- hook id: check-yaml
- duration: 4.25s
check toml...............................................................Passed
- hook id: check-toml
- duration: 0.27s
ruff.....................................................................Passed
- hook id: ruff
- duration: 0.2s

All checks passed!

ruff-format..............................................................Failed
- hook id: ruff-format
- duration: 0.31s
- files were modified by this hook

1 file reformatted, 487 files left unchanged

mypy.....................................................................Failed
- hook id: mypy
- duration: 12.86s
- exit code: 1

server\check_chain.py:30: error: Argument "key" to "sorted" has incompatible
type "Callable[[str | Any], str | Any | None]"; expected
"Callable[[str | Any], SupportsDunderLT[Any] | SupportsDunderGT[Any]]" 
[arg-type]
    for rev in sorted(migrations.keys(), key=lambda r: migrations[r]["time...
                                             ^
server\check_chain.py:30: error: Incompatible return value type (got
"str | Any | None", expected "SupportsDunderLT[Any] | SupportsDunderGT[Any]") 
[return-value]
    ...r rev in sorted(migrations.keys(), key=lambda r: migrations[r]["time"]...
                                                        ^~~~~~~~~~~~~~~~~~~~~
server\check_chain.py:33: error: Value of type "str | Any | None" is not
indexable  [index]
        print(f"{down_exists} {m['time']} | rev={rev:25s} | down={m['down'...
              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~...
server\check_dependencies.py:24: error: Need type annotation for "imports"
(hint: "imports: set[<type>] = ...")  [var-annotated]
        imports = set()
        ^~~~~~~
server\diagnose_db_connections.py:28: error: "Pool" has no attribute "size" 
[attr-defined]
        log.info(f"  - pool_size (基础连接数): {pool.size()}")
                                                     ^~~~
server\diagnose_db_connections.py:29: error: "Pool" has no attribute "overflow"
 [attr-defined]
        log.info(f"  - overflow (溢出连接数): {pool.overflow()}")
                                                    ^~~~~~~~
server\diagnose_db_connections.py:30: error: "Pool" has no attribute "_timeout"
 [attr-defined]
        log.info(f"  - timeout (超时时间): {pool._timeout}s")
                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
server\diagnose_db_connections.py:35: error: "Pool" has no attribute
"checkedout"  [attr-defined]
        log.info(f"  - 已签出连接数 (checked out): {pool.checkedout()}")
                                                          ^~~~~~~~
server\diagnose_db_connections.py:36: error: "Pool" has no attribute
"checkedin"  [attr-defined]
        log.info(f"  - 池中可用连接数 (checked in): {pool.checkedin()}")
                                                            ^~~~~
server\diagnose_db_connections.py:39: error: "Pool" has no attribute
"checkedout"  [attr-defined]
        checked_out = pool.checkedout()
                      ^~~~~~~~~~~~~~~
server\diagnose_db_connections.py:40: error: "Pool" has no attribute
"checkedin"  [attr-defined]
        checked_in = pool.checkedin()
                     ^~~~~~~~~~~~~~
server\diagnose_db_connections.py:45: error: "Pool" has no attribute "size" 
[attr-defined]
        total_possible = pool.size() + max_overflow
                         ^~~~~~~~~
server\diagnose_db_connections.py:101: error: Value of type "Row[Any] | None"
is not indexable  [index]
                log.info(f"  - 总连接数: {row[0]}")
                         ^~~~~~~~~~~~~~~~~~~~~~
server\diagnose_db_connections.py:102: error: Value of type "Row[Any] | None"
is not indexable  [index]
                log.info(f"  - 活跃连接: {row[1]}")
                         ^~~~~~~~~~~~~~~~~~~~~~
server\diagnose_db_connections.py:103: error: Value of type "Row[Any] | None"
is not indexable  [index]
                log.info(f"  - 空闲连接: {row[2]}")
                         ^~~~~~~~~~~~~~~~~~~~~~
server\diagnose_db_connections.py:104: error: Value of type "Row[Any] | None"
is not indexable  [index]
                log.info(f"  - 事务中空闲: {row[3]}")
                         ^~~~~~~~~~~~~~~~~~~~~~~
server\diagnose_db_connections.py:106: error: Value of type "Row[Any] | None"
is not indexable  [index]
                if row[3] > 0:
                   ^~~~~~
server\diagnose_db_connections.py:107: error: Value of type "Row[Any] | None"
is not indexable  [index]
                    log.warning(f"  ⚠️  发现 {row[3]} 个空闲事务连接，可能存在连接泄漏！")
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
server\test_board_api.py:19: error: Argument 1 to "where" of "Select" has
incompatible type "bool"; expected
"ColumnElement[bool] | _HasClauseElement[bool] | SQLCoreOperations[bool] | ExpressionElementRole[bool] | TypedColumnsClauseRole[bool] | Callable[[], ColumnElement[bool]] | LambdaElement"
 [arg-type]
            stmt = select(Board).where(not Board.is_archived)
                                       ^~~~~~~~~~~~~~~~~~~~~
Found 19 errors in 4 files (checked 488 source files)

uv-lock..............................................(no files to check)Skipped
- hook id: uv-lock
uv-export............................................(no files to check)Skipped
- hook id: uv-export
pre-commit hook(s) made changes.
If you are seeing this message in CI, reproduce locally with: `pre-commit run --all-files`.
To run `pre-commit` as part of git workflow, use `pre-commit install`.
All changes made by hooks:
diff --git a/server/diagnose_db_connections.py b/server/diagnose_db_connections.py
index be42338..ffd0e35 100644
--- a/server/diagnose_db_connections.py
+++ b/server/diagnose_db_connections.py
@@ -84,7 +84,6 @@ async def diagnose_connections() -> None:
     log.info("\n🗄️  数据库服务器连接状态:")
     try:
         async with async_engine.connect() as conn:
-
             # PostgreSQL 查询
             result = await conn.execute(
                 text("""

exit status 1                                      
  ────────────────────────────────────
summary: (done in 26.95 seconds)      
🥊 backend-linter (26.75 seconds)
